src/test/PreWrongType/PreWrongType.expected
error: PreWrongType.panda:9:5: @pre may not be used together with @override; did you mean to use @preOr?
error: PreWrongType.panda:15:5: @preOr must be used together with @override
2 errors
