src/test/PreWrongType/PreWrongType.panda
class Test {
    @pre(i > 10)
    method test(i:Int) {
        Console.writeLine(i)
    }
}

class Test2 : Test {
    @override
    @pre(i > 0)
    method test(i:Int) {
        Console.writeLine(i)
    }
        
    @class
    @preOr(i < 0)
    method test2(i:Int) {
        Console.writeLine(i)
    }
}

var t := Test2()
t.test(5)
Test2.test2(-5)
